# Project_K23

./: CMakeLists.txt  HashFunction.cpp  HashFunction.h  Hypercube.cpp  Hypercube.h  Input_GuideLines.txt  KMeansPLusPlus.cpp  KMeansPLusPlus.h  Makefile  Makefile.txt  README.md  cluster.conf  cluster.cpp  cube.cpp  desktop.ini  global_functions.cpp  global_functions.h  lsh.cpp  lsh.h  lsh_class.cpp  main.cpp  main_helper.cpp  main_helper.h  minst.cpp  minst.h  mnist.cpp  mnist.h
